force-app/main/default/objects/work__c/work__c.object-meta.xml
<CustomObject>
    <description>売上明細票CSVの情報を格納しSR情報用へ加工するオブジェクト</description>
    <label>work</label>
    <nameField>
        <displayFormat>WORK-{YYYYMMDD}-{00000000}</displayFormat>
        <label>work</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>