force-app/main/default/objects/work__c/fields/AdditionalCost__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCost__c</fullName>
    <label>追加原価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>