force-app/main/default/objects/work__c/fields/AffiliationName__c.field-meta.xml
<CustomField>
    <fullName>AffiliationName__c</fullName>
    <label>所属名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>