force-app/main/default/objects/work__c/fields/DeadlineDifference__c.field-meta.xml
<CustomField>
    <fullName>DeadlineDifference__c</fullName>
    <label>締切差異</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>