force-app/main/default/objects/work__c/fields/FinalForecastCP_ResultCP__c.field-meta.xml
<CustomField>
    <fullName>FinalForecastCP_ResultCP__c</fullName>
    <label>最終予想ＣＰ売上実績ＣＰ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>