force-app/main/default/objects/work__c/fields/LatestRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>LatestRegistrationDate__c</fullName>
    <label>最新登録年月日</label>
    <type>Date</type>
</CustomField>