force-app/main/default/objects/work__c/fields/ModelCode__c.field-meta.xml
<CustomField>
    <fullName>ModelCode__c</fullName>
    <label>機種コード</label>
    <length>5</length>
    <type>Text</type>
</CustomField>