force-app/main/default/objects/work__c/fields/NewRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>NewRegistrationDate__c</fullName>
    <label>新規登録年月日</label>
    <type>Date</type>
</CustomField>