force-app/main/default/objects/work__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>work</relationshipLabel>
    <relationshipName>work</relationshipName>
    <type>Lookup</type>
</CustomField>