force-app/main/default/objects/work__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <label>案件種別名称</label>
    <length>2</length>
    <type>Text</type>
</CustomField>