force-app/main/default/objects/work__c/fields/Orderer__c.field-meta.xml
<CustomField>
    <fullName>Orderer__c</fullName>
    <label>注文元名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>