force-app/main/default/objects/work__c/fields/PlannedOrderDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedOrderDate__c</fullName>
    <label>受注(予定)年月日</label>
    <type>Date</type>
</CustomField>