force-app/main/default/objects/work__c/fields/PlannedSalesDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedSalesDate__c</fullName>
    <label>売上(予定)年月日</label>
    <type>Date</type>
</CustomField>