force-app/main/default/objects/work__c/fields/PriorityWC_ResultWC__c.field-meta.xml
<CustomField>
    <fullName>PriorityWC_ResultWC__c</fullName>
    <label>優先ＷＣ売上実績ＷＣ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>