force-app/main/default/objects/work__c/fields/ReasonName__c.field-meta.xml
<CustomField>
    <fullName>ReasonName__c</fullName>
    <label>事由名称</label>
    <length>2</length>
    <type>Text</type>
</CustomField>