force-app/main/default/objects/work__c/fields/SR_Number__c.field-meta.xml
<CustomField>
    <fullName>SR_Number__c</fullName>
    <label>売報番号</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>