force-app/main/default/objects/work__c/fields/SR_Number_Body__c.field-meta.xml
<CustomField>
    <fullName>SR_Number_Body__c</fullName>
    <formula>LEFT( SUBSTITUTE( SR_Number__c, &apos;-&apos;, &apos;&apos; ), 9 )</formula>
    <label>売報番号（ボディ番号）</label>
    <type>Text</type>
</CustomField>