force-app/main/default/objects/work__c/fields/SRCP__c.field-meta.xml
<CustomField>
    <fullName>SRCP__c</fullName>
    <label>SRCP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>