force-app/main/default/objects/work__c/fields/SRWC__c.field-meta.xml
<CustomField>
    <fullName>SRWC__c</fullName>
    <label>SRWC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>