force-app/main/default/objects/work__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <label>ワーニング</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>