force-app/main/default/objects/work__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AffiliationName__c</columns>
    <columns>ContactPersonName__c</columns>
    <columns>Subject__c</columns>
    <columns>SR_Number__c</columns>
    <columns>OpportunityNumber__c</columns>
    <columns>Orderer__c</columns>
    <columns>J_Number__c</columns>
    <columns>LocationName__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>